@@ -175,6 +175,7 @@ dependencies {
         // Explicit specification of annotations version
         implementation 'org.jetbrains:annotations:23.0.0'
         implementation 'tokyo.northside:stardict4j:0.5.0'
+        implementation 'org.jsoup:jsoup:1.15.3'
 
         // Encoding detections
         implementation 'com.github.albfernandez:juniversalchardet:2.4.0'
@@ -510,7 +511,7 @@ distributions {
             }
             into('OmegaT.app/Contents/Java') {
                 with main.contents
-                exclude '*.sh', '*.kaptn', 'OmegaT', 'OmegaT.bat'
+                exclude '*.sh', '*.kaptn', 'OmegaT', 'OmegaT.bat', 'omegat.desktop'
             }
             if (!macJRE.empty) {
                 from(tarTree(macJRE.singleFile)) {
@@ -636,6 +637,7 @@ macDistZip {
         condition(!macJRE.empty, 'JRE not found')
     }
     archiveFileName.set("${applicationName}_${project.version}${omtVersion.beta}_Mac.zip")
+    group = 'omegat distribution'
 }
 
 task macSignedDistZip(type: Zip) {
@@ -644,6 +646,7 @@ task macSignedDistZip(type: Zip) {
         into zipRoot
     }
     archiveFileName.set("${zipRoot}.zip")
+    group = 'omegat distribution'
 }
 
 task macNotarize {
@@ -663,6 +666,7 @@ task macNotarize {
                 '--file', inputs.files.singleFile
         }
     }
+    group = 'omegat distribution'
 }
 
 task macStapledNotarizedDistZip(type: Zip) {
@@ -677,16 +681,17 @@ task macStapledNotarizedDistZip(type: Zip) {
         }
     }
     archiveFileName.set("${zipRoot}.zip")
+    group = 'omegat distribution'
 }
 
 task mac(dependsOn: [macDistZip, macNotarize]) {
     description = 'Build the Mac distributions.'
-    group = 'distribution'
+    group = 'omegat distribution'
 }
 
 task linux(dependsOn: [linux64DistTar]) {
     description = 'Build the Linux distributions.'
-    group = 'distribution'
+    group = 'omegat distribution'
 }
 
 linux64DistTar {
@@ -741,7 +746,7 @@ ext.getInnoSetupCustomMessages = {
 
 task win {
     description = 'Build the Windows distributions.'
-    group = 'distribution'
+    group = 'omegat distribution'
 }
 
 ext.makeWinTask = { args ->
@@ -772,6 +777,11 @@ ext.makeWinTask = { args ->
         }
         doFirst {
             delete "$destinationDir/jre"
+            delete installerExe
+            exec {
+                commandLine 'chmod', '-R', 'a+w', 'build'
+                ignoreExitValue true
+            }
         }
         doLast {
             project.copy {
@@ -794,39 +804,53 @@ ext.makeWinTask = { args ->
                 def exe = exePresent('iscc') ?  'iscc' : file('ci/iscc')
                 commandLine exe, "${destinationDir}/OmegaT.iss"
             }
-            ant.move file: "${destinationDir}/${installerBasename}.exe",
-                todir: distsDir
+            project.copy {
+                from("${destinationDir}/${installerBasename}.exe")
+                into(distsDir)
+            }
         }
     }
     def signedTaskName = "${args.name}Signed"
-    task(signedTaskName) {
+    def signedExe = "${distsDir}/${installerBasename}_Signed.exe"
+    task(type: Exec, signedTaskName) {
+        group = 'omegat distribution'
+        // You'd think we could just set the PATH, but there be dragons here
+        // https://github.com/palantir/gradle-docker/issues/162
+        // Starting from Nov 2022, certification provider force to use HSM to
+        // store private keys. Starting on June 1, 2023, at 00:00 UTC, industry
+        // standards will require private keys for standard code signing
+        // certificates to be stored on hardware certified as FIPS 140 Level 2,
+        // Common Criteria EAL 4+, or equivalent.
+        // #1179 build/release: Windows binary signature with PKCS#11 HSM
+        // https://sourceforge.net/p/omegat/bugs/1179/
+        // requires osslsigncode version 2.5 or later.
         onlyIf {
             // Set these in e.g. local.properties
-            def props = ['winCodesignFile', 'winCodesignPassword', 'winCodesignTimestampUrl']
+            def props = ['pkcs11module', 'winCodesignPassword']
             conditions([props.every { project.hasProperty(it) }, 'Code signing properties not set'],
                        [file(installerExe).file, 'Unsigned installer not built'],
-                       [exePresent('osslsigncode') || exePresent('docker'),
-                        'osslsigncode or Docker not installed'])
+                       [exePresent('osslsigncode'), 'osslsigncode not installed'])
         }
-        def signedExe = "${distsDir}/${installerBasename}_Signed.exe"
         inputs.file installerExe
         outputs.file signedExe
-        doLast {
-            exec {
-                // You'd think we could just set the PATH, but there be dragons here
-                // https://github.com/palantir/gradle-docker/issues/162
-                def exe = exePresent('osslsigncode') ? 'osslsigncode' : file('ci/osslsigncode')
-                commandLine exe, 'sign',
-                    '-pkcs12', project.property('winCodesignFile'),
-                    '-pass', project.property('winCodesignPassword'),
-                    '-n', applicationName,
-                    '-i', omtWebsite,
-                    '-t', project.property('winCodesignTimestampUrl'),
-                    '-h', 'sha2',
-                    '-in', installerExe,
-                    '-out', signedExe
-            }
+        def commandArgs = ['osslsigncode', 'sign', '-pkcs11module', project.hasProperty('pkcs11module')?
+                project.property('pkcs11module') : 'dummy(it should specified)']
+        if (project.hasProperty('winCodesignCert')) {
+            commandArgs.addAll('-certs', project.property('winCodesignCert'))
         }
+        if (project.hasProperty('pkcs11cert')) {
+            commandArgs.addAll('-pkcs11cert', project.property('pkcs11cert'))
+        }
+        if (project.hasProperty('winCodesignPassword')) {
+            commandArgs.addAll('-pass', project.property('winCodesignPassword'))
+        }
+        commandArgs.addAll(
+                '-t', project.hasProperty('winCodesignTimestampUrl')? project.property('winCodesignTimestampUrl') :
+                        'http://time.certum.pl/',
+                '-n', applicationName, '-i', omtWebsite, '-h', 'sha256',
+                '-in', installerExe.toString(),
+                '-out', signedExe.toString())
+        commandLine(commandArgs)
         dependsOn args.name
     }
     assemble.dependsOn args.name, signedTaskName
@@ -935,7 +959,6 @@ task genMac {
 
 task changedOnBranch {
     description = 'List files that have been modified on this git branch.'
-    group = 'omegat workflow'
     doLast {
         ext.files = project.files(gitModifiedFiles())
         ext.files.each { println(it) }
@@ -998,12 +1021,10 @@ tasks.jacocoTestCoverageVerification {
 
 task manualPdfs {
     description = 'Build PDF manuals for all languages. Requires Docker.'
-    group = 'omegat workflow'
 }
 
 task manualHtmls {
     description = 'Build HTML manuals for all languages. Requires Docker.'
-    group = 'omegat workflow'
 }
 
 ext.manualIndexXmls = fileTree(dir: 'doc_src', include: '**/OmegaTUsersManual_xinclude full.xml')
@@ -1043,16 +1064,14 @@ manualIndexXmls.each { xml ->
 
 task instantStartGuides {
     description = 'Build Instant Start guides for all languages. Requires Docker.'
-    group = 'omegat workflow'
 }
 
 task firstSteps {
     description = 'Build First Step pages for all languages. Requires Docker.'
-    group = 'omegat workflow'
 }
 
 task updateManuals {
-    group = 'omegat workflow'
+    group = 'omegat release'
     description = 'Update Instant Start guides and HTML manuals.'
     dependsOn manualHtmls, firstSteps, instantStartGuides
     finalizedBy genDocIndex
@@ -1090,13 +1109,16 @@ instantStartXmls.each { xml ->
     instantStartGuides.dependsOn taskName
 }
 
-
+tasks.getByName("run") {
+    jvmArgs(["--add-opens", "java.desktop/sun.awt.X11=ALL-UNNAMED"])
+}
 
 task debug(type: JavaExec) {
     description = 'Launch app for debugging.' // Special debug task for NetBeans
     group = 'application'
     mainClass = mainClassName
     classpath = sourceSets.main.runtimeClasspath
+    jvmArgs(["--illegal-access=warn"])
     debug true
 }
 
@@ -1107,6 +1129,7 @@ task runOnJava17(type: JavaExec) {
     }
     mainClass = application.mainClass
     classpath = sourceSets.main.runtimeClasspath
+    jvmArgs(["--add-opens", "java.desktop/sun.awt.X11=ALL-UNNAMED"])
     group = 'application'
 }
 
@@ -1207,6 +1230,7 @@ ext.publishAtomically = { args ->
     task("publish${args.name.capitalize()}") {
         description = "Copy ${args.name} to SourceForge web."
         dependsOn args.sourceTask
+        group = 'omegat release'
         doLast {
             ssh.run {
                 session(remotes.sourceforgeWeb) {
@@ -1236,7 +1260,7 @@ publishAtomically(name: 'javadoc', sourceTask: javadoc)
 
 task publishVersion {
     description = 'Update the version considered current by the version check.'
-    group = 'omegat workflow'
+    group = 'omegat release'
     doLast {
         ssh.run {
             session(remotes.sourceforgeWeb) {
